# mini_kvm

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  Makefile  README.md
bios/: CMakeLists.txt  bios.ld  boot.s
src/: args.c  args.h  commands.h  constants.h  debug.c  debug.h  logger.c  logger.h  main.c
src/commands/: commands.h  pause.c  pause.h  resume.c  resume.h  run.c  run.h  shutdown.c  shutdown.h  status.c  status.h
src/core/: constants.h  containers.c  containers.h  core.c  core.h  errors.h  filesystem.c  logger.h
src/ipc/: ipc.c  ipc.h
src/kvm/: kvm.c  kvm.h
src/utils/: errors.h  filesystem.c  filesystem.h  logger.c  logger.h  utils.c  utils.h
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  conversion.c
tests/run/: CMakeLists.txt  args.c
tests/utils/: conversion.c
